# cloud-security-copilot

./: .gitignore  README.md  pyproject.toml  requirements.txt  run_dev.ps1
backend/: aws_scanner.py  llm_explainer.py  main.py  main.txt  policy_analyzer.py  rag_engine.py  requirements.txt
backend/schemas/: explain_request.py  explain_response.py  scan_request.py  scan_response.py
backend/services/: explain_service.py  scan_service.py
backend/utils/: constants.py  logger.py
frontend/: streamlit_app.py
frontend/components/: chat_interface.py  findings_view.py  policy_upload.py
knowledge_base/: iam_privilege_escalation.md  wildcard_permissions.md
