[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cloud-security-copilot"
version = "1.1.0"
dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "boto3"
]

[tool.setuptools.packages.find]
include = ["backend*"]  # This tells it to only install the backend